Update Blog “2018-09-21-ビットコイン原論文解説　概要”

--- a/src/pages/blog/2018-09-21-ビットコイン原論文解説　概要.md
+++ b/src/pages/blog/2018-09-21-ビットコイン原論文解説　概要.md
@@ -11,9 +11,31 @@ tags:
 
 ## 目次
 
-第1章
+**<font color="Green">概要</font>**
 
+第1章　イントロダクション
 
+第2章　取引
+
+第3章　タイムスタンプ・サーバー
+
+第4章　Proof of Work
+
+第5章　ネットワーク
+
+第6章　インセンティブ
+
+第7章　ディスク領域の再利用
+
+第8章　簡易版支払い検証
+
+第9章　価値の結合と分割
+
+第10章　プライバシー
+
+第11章　計算
+
+第12章　結論
 
 ## 原文
 
@@ -21,8 +43,59 @@ tags:
 
 ## 原文日本語訳
 
-純粋にP2Pな電子マネーは、金融機関を介することなく、ある当事者から別の当事者へ直接オンライン支払いが送られることを可能にします。デジタル署名は解決策の一部を提供しますが、信頼できる第三者が二重支払いを防止する必要がある場合、主な利点は失われます。私たちは、この二重支払い問題に対し、P2Pネットワークを利用する解決方法を提案します。ネットワークは、取引記録をハッシュ化したものを、継続するハッシュベースのProof of Workによるチェーンに入れ込むことでタイムスタンプを刻みます。このチェーンは、再度Proof of Workを実行しない限り変更されることのない記録となります。最も長いチェーンはイベントの連鎖が観察されたことの証明となるだけでなく、最大のCPUパワーのプールによってもたらされたことの証明となります。過半数のCPUパワーがネットワークに対する攻撃に協力しないノードによって管理される限り、それらのノードは攻撃者よりも速く最も長いチェーンを生成するでしょう。ネットワークそれ自体の構造はミニマルです。メッセージは最前努力原則に基づいてブロードキャストされ、ノードは自由にネットワークを離れたり再接続できます。再接続の際には、最も長いProof of Workのチェーンを離れていた間に起こった出来事の証明として受け入れます。
+純粋にP2Pな電子マネーは、金融機関を介することなく、ある当事者から別の当事者へ直接オンライン支払いが送られることを可能にします。デジタル署名は解決策の一部を提供しますが、信頼できる第三者が二重支払いを防止する必要がある場合、主な利点は失われます。
 
+私たちは、この二重支払い問題に対し、P2Pネットワークを利用する解決方法を提案します。
 
+ネットワークは、取引記録をハッシュ化したものを、継続するハッシュベースのProof of Workによるチェーンに入れ込むことでタイムスタンプを刻みます。このチェーンは、再度Proof of Workを実行しない限り変更されることのない記録となります。最も長いチェーンはイベントの連鎖が観察されたことの証明となるだけでなく、最大のCPUパワーのプールによってもたらされたことの証明となります。過半数のCPUパワーがネットワークに対する攻撃に協力しないノードによって管理される限り、それらのノードは攻撃者よりも速く最も長いチェーンを生成するでしょう。
+
+ネットワークそれ自体の構造はミニマルです。
+
+メッセージは最前努力原則に基づいてブロードキャストされ、ノードは自由にネットワークを離れたり再接続できます。再接続の際には、最も長いProof of Workのチェーンを離れていた間に起こった出来事の証明として受け入れます。
 
 ## 解説
+
+本章はあくまでも「概要」に当たるため、細かい内容については各章の解説に譲ります。ここでは、最も重要な点は何かを抽出します。
+
+ポイントは以下の点です。
+
+* この論文の目的は、**二重支払い問題に対してP2Pネットワークを利用する解決方法を提案すること**、である。
+* 上記実現のため、**Proof of Workによって取引記録のハッシュチェーンを作成**する。
+* **最長のチェーンが取引記録を証明**する
+* 善意のノードが**CPUパワーの過半数**を持てば攻撃者からネットワークを守れる
+* ノードは任意にネットワークに接続したり離れることができる
+
+一部については先の内容を先取りしているところもありますが、分かりやすさを重視して付け加えました。
+
+### そもそも何を解決したいのか
+
+本論文は「二重支払い問題の解決」という目的があります。では、二重支払い問題とは何でしょうか。次の例を考えてみてください。
+
+* Alice: ECサイト運営しており、手作りの装飾品を販売している
+* Bob: ハッカーで詐欺師。Aliceから物品を巻き上げようとしている
+
+ある日、BobからAliceに販売中の装飾品を購入したいとオファーが入ります。AliceはBobの取引記録
+
+### Proof of Workとは？
+
+ネットワークを攻撃する人にとってコストになる仕組みです。ブロックチェーンは、善良なノードがProof of Workに費やされるCPUパワーの過半数を占める限りにおいて成り立ちます。
+
+→ 第4章　Proof of Work
+
+### ハッシュチェーンとは？
+
+ハッシュ（＝ハッシュ値）とは、あるインプットをハッシュ関数に通すことで出てきたアウトプットのことです。ブロックチェーンでは大別して二種類のハッシュ値が登場します。
+
+1. 一つ前のブロックを示すハッシュ・・・取引記録が改ざんされていないかどうかの検証に使います
+2. 各取引記録をまとめたハッシュ・・・メモリに保存するデータ量の削減のために利用します
+
+ブロックチェーンが「チェーン」である由来は、1のハッシュが数珠状に繋がっている様子が鎖のように見えることです。
+
+→ 第3章　タイムスタンプ・サーバー
+
+2のハッシュの役割は、各ノードが全ての取引記録を扱うことは非効率的であるため、必要最低限の情報のみ保持することが目的です。
+
+→ 第7章　ディスク領域の再利用
+
+<hr>
+次章: 第1章　イントロダクション
