Update Blog “2018-09-21-ビットコイン原論文解説　概要”

--- a/src/pages/blog/2018-09-21-ビットコイン原論文解説　概要.md
+++ b/src/pages/blog/2018-09-21-ビットコイン原論文解説　概要.md
@@ -74,7 +74,7 @@ tags:
 * Alice: ECサイト運営しており、手作りの装飾品を販売している
 * Bob: ハッカーで詐欺師。Aliceから物品を巻き上げようとしている
 
-ある日、BobからAliceに販売中の装飾品を購入したいとオファーが入ります。AliceはBobの取引記録
+ある日、BobからAliceに販売中の装飾品を購入したいとオファーが入ります。AliceはBobの取引記録を
 
 ### Proof of Workとは？
 
