Update Blog “2018-09-21-ビットコイン原論文解説　第1章「イントロダクション」”

--- a/src/pages/blog/2018-09-21-ビットコイン原論文解説　第1章「イントロダクション」.md
+++ b/src/pages/blog/2018-09-21-ビットコイン原論文解説　第1章「イントロダクション」.md
@@ -67,7 +67,7 @@ tags:
 * そこで本論文では、P2Pの分散タイムスタンプサーバーを用いて、取引の時系列を計算によって証明することで、二重支払い問題の解決法を提案する。
 * この手法は、善意のノードが協力して攻撃者のCPUパワーを上回る限り安全である。
 
-### 詳解
+### 詳しい解説
 
 基本的にはまとめの通り、「金融機関を介さずにP2Pで決済する仕組みを提案します」というのが言いたいことで、頭とお尻さえ読めば大づかみには理解可能です。
 
