Update Blog “2018-09-21-ビットコイン原論文解説　第2章「取引」”

--- a/src/pages/blog/2018-09-21-ビットコイン原論文解説　第2章「取引」.md
+++ b/src/pages/blog/2018-09-21-ビットコイン原論文解説　第2章「取引」.md
@@ -53,15 +53,56 @@ tags:
 
 ![署名と検証の流れ](/img/bitcoin原論文_第2章_図.jpg)
 
-もちろん、問題は、受取人が所有者の1人がコインを二重に消費していないことを確認できないことです。一般的な解決方法は、重複支出をすべてのトランザクションでチェックする、信頼できる中央機関、すなわちミントを導入することです。各取引の後、コインはミントに戻って新しいコインを発行しなければならず、ミントから直接発行されたコインのみが二重使用されないことを信頼される。この解決策の問題点は、マネーシステム全体の運命は、銀行と同じように、すべての取引が通過しなければならないミントを運営する会社に依存するということです。
+もちろん、問題は、受取人には過去の所有者がコインを二重に消費していないことを確認できないことです。一般的な解決方法は、二重支払いすべての取引でチェックする、信頼できる中央機関ないし造幣局を導入することです。各取引の後、新しいコインを発行するためにコインは造幣局に戻さねばならず、造幣局から直接発行されたコインのみが二重使用されないと信頼されます。この解決策の問題点は、全ての取引が造幣局を通ることで、銀行と同じように造幣局を運営する会社に金融システム全体が依存するということです。
 
-先の所有者が以前の取引に署名していないことを受取人が知る方法が必要です。私たちの目的のために、最も早い取引は重要な取引であるため、後で二重支出をしようとすることについては気にしません。トランザクションの不在を確認する唯一の方法は、すべてのトランザクションを認識することです。ミントベースのモデルでは、ミントはすべての取引を認識しており、最初に到着したものを決定しました。これを信頼できる当事者なしで達成するには、取引を公表する必要があります。\[1]、参加者が受領した注文の単一の履歴に同意するシステムが必要です。受取人は、各取引の時点で、ノードの大部分がそれが最初に受け取られたことに同意したという証拠を必要とします。
+コインの前の所有者が過去の取引で二重署名していないことを受取人が知る方法が必要です。この目的のために、最初の取引が重要なのであって、後で二重支出をしようとすることについては考慮しません。二重取引がないことを確認する唯一の方法は、すべてのトランザクションを知ることです。造幣局ベースのモデルでは、造幣局はすべての取引を認識しており、どの取引が最初に到着したのかを決定します。これを信頼できる第三者なしで達成するには、取引を公表する必要があります\[1]。また、参加者が受領した取引の履歴をただ一つのものとして同意するシステムが必要です。受取人は、各取引の時点で、ノードの大部分がその取引が最初に受け取られたと合意した証拠を必要とします。
 
 ## 解説
 
 ### まとめ
 
+* 電子コインを「デジタル署名のチェーン」として定義する。
+* コインの送付者は前の取引のハッシュと次の所有者の公開鍵を署名し、過去から現在までの所有者リストができる。
+* コインの受取人は、コインの送付者が二重支払いをしていないか検証しなければならない。
+* どのように二重支払いがないかを検証するかの一つの手段は造幣局を設置して全ての取引を監視することである。しかしこれでは銀行と変わらない。
+* 信頼する第三者なしに二重支払いがないことを確認するために、全ての取引が公開されている必要がある。
+* また、取引の順番を一意に定めるために、ネットワークに参加するノードの大部分が各取引の時点で順番を合意する必要がある。
+
 ### 詳しい解説
+
+ハッシュや公開鍵、デジタル署名という用語が出てきて少し難解な章です。順番に解説します。
+
+> 私たちは、電子コインを「デジタル署名のチェーン」として定義します。各所有者は、前の取引のハッシュと次の所有者の公開鍵をデジタル署名し、これらをコインの最後に追加することによって、コインを次の所有者に転送します。受取人は、署名を検証することで、一連の所有者を確かめることができます。
+>
+> ![署名と検証の流れ](/img/bitcoin原論文_第2章_図.jpg)
+
+まず、「電子コイン」という言葉についてですが、ビットコインには銀行口座残高のようなストックの概念がありません。全てフローで捉えており、現時点で利用できるコインがあるかどうかは、過去の取引記録を最初から順番に追っていくことで把握できます。
+
+？？お金としてのカウントはどうするのか？？
+
+？？実際にどういうブロックヘッダーになっている？？
+
+？？検証が左から右に流れているのはなぜ？？
+
+？？この図はあっている？？
+
+> もちろん、問題は、受取人には過去の所有者がコインを二重に消費していないことを確認できないことです。一般的な解決方法は、二重支払いすべての取引でチェックする、信頼できる中央機関ないし造幣局を導入することです。各取引の後、新しいコインを発行するためにコインは造幣局に戻さねばならず、造幣局から直接発行されたコインのみが二重使用されないと信頼されます。この解決策の問題点は、全ての取引が造幣局を通ることで、銀行と同じように造幣局を運営する会社に金融システム全体が依存するということです。
+
+これまで見てきたように、コインというのは取引記録のハッシュと、次の所有者の公開鍵が署名されたファイルにすぎませんので、コピーすることが可能です。Aさんの公開鍵を署名したすぐ後で、同じ取引記録のハッシュにBさんの公開鍵を署名することも可能です。これを「二重支払い」と呼んでいます。
+
+二重支払いは、当然ながらどちらか片方のみ有効ですが、コインを受け取ったAさんもBさんも、送付者が二重支払いをしていないことを確かめるすべがありません。
+
+もし力技で二重支払いを禁止するならば、信頼できる第三者機関を経由してコインを送付することです。ただし、それでは取引コストをあげてしまうので、このような第三者機関がいなくても成り立つ二重支払い防止のための仕組みが必要になります。
+
+> コインの前の所有者が過去の取引で二重署名していないことを受取人が知る方法が必要です。この目的のために、最初の取引が重要なのであって、後で二重支出をしようとすることについては考慮しません。二重取引がないことを確認する唯一の方法は、すべてのトランザクションを知ることです。造幣局ベースのモデルでは、造幣局はすべての取引を認識しており、どの取引が最初に到着したのかを決定します。これを信頼できる第三者なしで達成するには、取引を公表する必要があります[1]。また、参加者が受領した取引の履歴をただ一つのものとして同意するシステムが必要です。受取人は、各取引の時点で、ノードの大部分がその取引が最初に受け取られたと合意した証拠を必要とします。
+
+コインの受取人が二重支払いがないことを検証するには、ある取引の前に別の取引が行われていないことを証明すればよいのです。すなわち取引の順番を確定させることです。
+
+何度も論じてきているように、信頼できる第三者が全ての取引を監視して順番を決定するというモデルは却下されます。
+
+ではどうするかというと、全ての取引を公開する必要した上で、ネットワーク参加者が取引履歴の順番をたった一つのものとして合意して決定します。
+
+具体例を使って説明すると、コインをAさんに送付したという取引と、Bさんに送付したという取引の二つがあった時、A → Bの順番であったと過半数のノードが同意すれば、二番目のBへの取引は無効化されるということです。
 
 <hr>
 次章: 第3章　タイムスタンプ・サーバー
