Update Blog “2018-09-22-ビットコイン原論文解説　第5章「ネットワーク」”

--- a/src/pages/blog/2018-09-22-ビットコイン原論文解説　第5章「ネットワーク」.md
+++ b/src/pages/blog/2018-09-22-ビットコイン原論文解説　第5章「ネットワーク」.md
@@ -38,13 +38,15 @@ tags:
 第12章　結論
 
 ## 原文
+
 > The steps to run the network are as follows:
-> 1) New transactions are broadcast to all nodes.
-> 2) Each node collects new transactions into a block.
-> 3) Each node works on finding a difficult proof-of-work for its block.
-> 4) When a node finds a proof-of-work, it broadcasts the block to all nodes.
-> 5) Nodes accept the block only if all transactions in it are valid and not already spent.
-> 6) Nodes express their acceptance of the block by working on creating the next block in the chain, using the hash of the accepted block as the previous hash.
+>
+> 1. New transactions are broadcast to all nodes.
+> 2. Each node collects new transactions into a block.
+> 3. Each node works on finding a difficult proof-of-work for its block.
+> 4. When a node finds a proof-of-work, it broadcasts the block to all nodes.
+> 5. Nodes accept the block only if all transactions in it are valid and not already spent.
+> 6. Nodes express their acceptance of the block by working on creating the next block in the chain, using the hash of the accepted block as the previous hash.
 >
 > Nodes always consider the longest chain to be the correct one and will keep working on extending it. If two nodes broadcast different versions of the next block simultaneously, some nodes may receive one or the other first. In that case, they work on the first one they received, but save the other branch in case it becomes longer. The tie will be broken when the next proofof-work is found and one branch becomes longer; the nodes that were working on the other branch will then switch to the longer one.
 >
@@ -52,17 +54,30 @@ tags:
 
 ## 原文日本語訳
 
+ネットワークを実行する手順は次のとおりです。
 
+1. 新しい取引はすべてのノードにブロードキャストされます。
+2. 各ノードは新しい取引をブロックに集めます。
+3. 各ノードは、そのブロックに対して困難なProof of Workに取り組みます。
+4. ノードがProof of Workを完了すると、すべてのノードにブロックをブロードキャストします。
+5. ノードは、その中のすべての取引が有効で、二重取引されていない場合にのみブロックを受け入れます。
+6. ノードは、受領したブロックのハッシュを前のハッシュとして使用して次のブロックの作成に取り組むことで、ブロックの受け入れを表します。
+
+ノードは常に最長のチェーンを正しいものと見なし、拡張を続けます。2つのノードが異なるブロックを同時にブロードキャストする場合、ノードはどちらかのブロックを先に受け取ります。その場合、彼らは最初に受け取ったものを正しいとみなして処理を進めますが、もう一方のブランチが長くなることに備えて後から届いたブロックも保持します。次のProof of Work完了して1つのブランチが長くなると均衡は崩れます。短い方のブランチで作業していたノードは、長いブランチに切り替えます。
+
+新しい取引がブロードキャストされても、必ずしもすべてのノードに到達する必要はありません。取引が多くのノードに到達する限り、遠からずブロックに入るでしょう。ブロックのブロードキャストもまた、メッセージが脱落したとしても寛容です。もしノードがブロックを受信しなかった場合、ノードは次のブロックを受信したとき、あるいはブロックが失われていると認識したときにブロックを要求します。
 
 ## 解説
 
 ### まとめ
 
-
+* 新しい取引記録は全てのノードにブロードキャストされ、ブロックにまとめられ、Proof of Workが完了するとブロックがブロードキャストされる。
+* ノードは親ブロックのハッシュを子ブロックに入れ込むことで、ブロックの受け入れを表明する。
+* ノードは最長のチェーンを正しいものとみなして拡張を行う。
+* もし同時に新しいブロックが作られて、ノードが異なる二つを受け取ったら、先に届いた方のブランチでチェーンを伸ばす。その後、もう一方のブランチが長くなるならば、長い方のブランチに切り替える。
+* 取引もブロックも将来的には全ノードに行き渡るので、瞬時に全ノードに取り込まれる必要はない。
 
 ### 詳しい解説
-
-
 
 <hr>
 次章: 第6章　インセンティブ
