Update Blog “2018-09-22-ビットコイン原論文解説　第5章「ネットワーク」”

--- a/src/pages/blog/2018-09-22-ビットコイン原論文解説　第5章「ネットワーク」.md
+++ b/src/pages/blog/2018-09-22-ビットコイン原論文解説　第5章「ネットワーク」.md
@@ -79,5 +79,35 @@ tags:
 
 ### 詳しい解説
 
+本章はネットワークの中でブロックチェーンがどういう順番で作成されていくのかを、ノードの目線で解説しています。ブランチの下りなどはGitユーザーにとってはイメージしやすいものではないでしょうか。もちろんGitを利用したことがない方にもわかりやすく説明します。
+
+ノードの役割
+
+まず、ノードの役割を整理してみます。
+
+1. ブロックチェーンを保存する
+2. Proof of Workを解いて新しいブロックを生成する
+3. 取引やブロックに問題がないか検証する
+
+1番目の役割があることで、これまでの取引記録を遡って追跡が可能になります。始まりから全てのデータを持っているノードのことを「フルノード」と呼びます。一般ユーザー、あるいはウォレットなどを開発する事業者の一部は、フルノードが用意するサーバーを通してブロックチェーンにアクセスします。もちろん、そのような事業者が介在することは中央を作ることと同じですので、自らフルノードになっても構いません。その場合には全てのデータが保存できるだけのストレージ、24時間のネット接続環境、検証するのに十分なメモリを備える必要があります。
+
+2番目の役割ですが、前章で解説した通り、Proof of Workの計算は膨大なCPUパワーを消費し、高性能なマシン代や高額な電気代といったコストがかかります。なぜそのようなコストをかけてまでネットワークを維持するかという理由は、次章の「インセンティブ」で解説します。なお、Proof of Workを行ってブロックを生成することを「マイニング（採掘）」と呼ぶので、そのようなノードを一般に「マイナー（採掘者）」と呼びます。このマイナー達のおかげでブロックが作られ、取引が承認されるので、自らマイナーとならなくても取引を行うことができます。
+
+3番目の役割は取引やブロックの検証です。取引については第2章で二重支払い問題について取り上げていましたが、二重支払いだけでなく、様々な送金に関するルールを満たしているかがチェックされます。ブロックの検証も同様に、Proof of Workで定められた条件を満たしたノンスであるかだけでなく、様々なブロック生成のルールに準拠しているかがチェックされます。この検証ができるノードはフルノードだけでなく、ブロックチェーンデータの一部だけを持てば良い、より軽量なノードでも簡易的に実施することができます。詳細は第8章「簡易版支払い検証」で解説します。
+
+これらが主な役割ですが、他にも受け取った取引やブロックを、隣接するノードに伝播させるという重要な役割も担っています。
+
+ブロックのコンフリクト
+
+当然のことながら、世界中にノードがあるので新しい取引やブロックが伝播するのは時間がかかります。このタイムラグは数秒程度と言われていますが、その数秒の間に異なるノードが異なるブロックを同時に作成し、ネットワークに流してしまうことがありえます。
+
+ブロックを受け取るノードは、先に届いた方のブロックを検証してチェーンに加えます。そして、新しいブロックをそのチェーンに加えるようにProof of Workを実行します。
+
+ではこの時、後から遅れて届いたブロックを無視するかというと、そうはしません。遅いブロックについてもサブブランチとして取り込んでおきます。そしてその後、サブブランチの方をメインブランチとして扱っていたノードから新しいブロックが届いたならばい、サブブランチをメインブランチに切り替えます。これがブロックチェーンの「再収縮（reconvergence）」と呼ばれる現象です。
+
+
+
+
+
 <hr>
 次章: 第6章　インセンティブ
