Update Blog “2018-09-22-ビットコイン原論文解説　第5章「ネットワーク」”

--- a/src/pages/blog/2018-09-22-ビットコイン原論文解説　第5章「ネットワーク」.md
+++ b/src/pages/blog/2018-09-22-ビットコイン原論文解説　第5章「ネットワーク」.md
@@ -81,7 +81,7 @@ tags:
 
 本章はネットワークの中でブロックチェーンがどういう順番で作成されていくのかを、ノードの目線で解説しています。ブランチの下りなどはGitユーザーにとってはイメージしやすいものではないでしょうか。もちろんGitを利用したことがない方にもわかりやすく説明します。
 
-ノードの役割
+#### ノードの役割
 
 まず、ノードの役割を整理してみます。
 
@@ -97,15 +97,19 @@ tags:
 
 これらが主な役割ですが、他にも受け取った取引やブロックを、隣接するノードに伝播させるという重要な役割も担っています。
 
-ブロックのコンフリクト
+#### ブロックのコンフリクト
 
 当然のことながら、世界中にノードがあるので新しい取引やブロックが伝播するのは時間がかかります。このタイムラグは数秒程度と言われていますが、その数秒の間に異なるノードが異なるブロックを同時に作成し、ネットワークに流してしまうことがありえます。
 
 ブロックを受け取るノードは、先に届いた方のブロックを検証してチェーンに加えます。そして、新しいブロックをそのチェーンに加えるようにProof of Workを実行します。
 
-ではこの時、後から遅れて届いたブロックを無視するかというと、そうはしません。遅いブロックについてもサブブランチとして取り込んでおきます。そしてその後、サブブランチの方をメインブランチとして扱っていたノードから新しいブロックが届いたならばい、サブブランチをメインブランチに切り替えます。これがブロックチェーンの「再収縮（reconvergence）」と呼ばれる現象です。
+ではこの時、後から遅れて届いたブロックを無視するかというと、そうはしません。遅いブロックについてもサブブランチとして取り込んでおきます。そしてその後、サブブランチの方をメインブランチとして扱っていたノードから新しいブロックが届いたならば、サブブランチをメインブランチに切り替えます。これがブロックチェーンの「再収縮（reconvergence）」と呼ばれる現象です。
 
+#### いつ取引やブロックが取り込まれるか
 
+先述したように、ノードは世界中に存在するため、全てのノードにデータが行き渡るのには時間がかかります。また、何らかのネットワーク上の障害によって、あるノード間で接続が切れてデータが届かない、ということもあります。
+
+そのような場合でも、ネットワークは他のルートを経由し、最終的には全ノードに同じデータが行き渡ります。
 
 
 
