Update Blog “2018-09-22-ビットコイン原論文解説　第6章「インセンティブ」”

--- a/src/pages/blog/2018-09-22-ビットコイン原論文解説　第6章「インセンティブ」.md
+++ b/src/pages/blog/2018-09-22-ビットコイン原論文解説　第6章「インセンティブ」.md
@@ -39,20 +39,33 @@ tags:
 
 ## 原文
 
+> By convention, the first transaction in a block is a special transaction that starts a new coin owned by the creator of the block. This adds an incentive for nodes to support the network, and provides a way to initially distribute coins into circulation, since there is no central authority to issue them. The steady addition of a constant of amount of new coins is analogous to gold miners expending resources to add gold to circulation. In our case, it is CPU time and electricity that is expended.
+>
+> The incentive can also be funded with transaction fees. If the output value of a transaction is less than its input value, the difference is a transaction fee that is added to the incentive value of the block containing the transaction. Once a predetermined number of coins have entered circulation, the incentive can transition entirely to transaction fees and be completely inflation free.
+>
+> The incentive may help encourage nodes to stay honest. If a greedy attacker is able to assemble more CPU power than all the honest nodes, he would have to choose between using it to defraud people by stealing back his payments, or using it to generate new coins. He ought to find it more profitable to play by the rules, such rules that favour him with more new coins than everyone else combined, than to undermine the system and the validity of his own wealth.
 
 ## 原文日本語訳
 
+規約上、ブロック内の最初の取引は特別なものであり、新しいコインをブロックの作成者が受け取る取引から始まります。これにより、ノードがネットワークを維持するインセンティブが提供されるだけでなく、コインを発行する中央当局なしで最初にコインを供給し流通させる方法を提供します。新しいコインが継続して安定的に供給される様子は、金の採掘者が金を循環させるのに資源を消費するのに似ています。私たちの場合、CPU時間と電力が消費されます。
 
+インセンティブには取引手数料もあります。もし取引の出力値が入力値よりも小さい場合、その差は該当取引を含むブロックのインセンティブ値として取引手数料に加算されます。あらかじめ定められた数のコインが流入すると、インセンティブは取引手数料に完全に移行し、インフレがなくなります。
+
+インセンティブにより、ノードは善良であろうとします。欲張りな攻撃者がすべての善意なノードよりも多くのCPUパワーを集めることができれば、攻撃者は二重支払いを行なって人を欺くか、新しいコインを生成するかのどちらかを選択する必要があります。攻撃者は、システムを毀損して自らのコインの価値を下げるよりも、自分が他の誰よりも新しいコインを得ることができるルールを尊重する方が、より利益になるとわかっているはずです。
 
 ## 解説
 
 ### まとめ
 
-
+* 新しいブロックの作成者は、報酬としてコインを受け取る。
+* この仕組みがあることでノードがコストを負担するインセンティブになるだけでなく、コインを発行する中央当局がいないネットワークでコインを流通させることができる。
+* インセンティブとなるのはブロック生成時に提供されるコインだけでなく、取引手数料もある。取引手数料の金額は、作成したブロックに含まれる取引のインプットとアウトプットの差額である。
+* ブロック作成時に流通する決められた量のコインが尽きた後は、取引手数料だけが報酬となり、インフレから解放される。
+* もし攻撃者が善良なノード以上のCPUパワーを持っても、ネットワークを攻撃して記録を改ざんするより、報酬を受け取った方が得なのでルールを遵守するだろう。
 
 ### 詳しい解説
 
-
-
 <hr>
-次章: 第7章　ディスク領域の再利用
+＜　前章: 第5章　ネットワーク
+
+　　次章: 第7章　ディスク領域の再利用　＞
