Update Blog “2018-09-22-ビットコイン原論文解説　第6章「インセンティブ」”

--- a/src/pages/blog/2018-09-22-ビットコイン原論文解説　第6章「インセンティブ」.md
+++ b/src/pages/blog/2018-09-22-ビットコイン原論文解説　第6章「インセンティブ」.md
@@ -65,6 +65,25 @@ tags:
 
 ### 詳しい解説
 
+本章では、技術というよりは経済的な話題になります。
+
+前章において、ビットコインではProof of Workを解いてブロックを作成したり、取引やブロックに問題がないか監視をするノードがネットワークを支えていると解説しました。それでは、なぜノードはそのようなコストをかけてまでネットワークを維持しようとするのでしょうか。
+
+ノードに対する報酬
+
+それは、ノードはブロックを作成した時に報酬を得ることができるからです。
+
+具体的には次の報酬が用意されています。
+
+1. あらかじめ定められたコイン
+2. 取引のインプットとアウトプットの差分である取引手数料
+
+1については、ビットコインでは次のルールになっています。
+
+* ビットコイン稼働開始時点での報酬は、1ブロック作成で50BTC
+* 21万ブロック（約4年）ごとに報酬が半減する
+* 
+
 <hr>
 ＜　前章: 第5章　ネットワーク
 
