Update Blog “2018-09-22-ビットコイン原論文解説　第6章「インセンティブ」”

--- a/src/pages/blog/2018-09-22-ビットコイン原論文解説　第6章「インセンティブ」.md
+++ b/src/pages/blog/2018-09-22-ビットコイン原論文解説　第6章「インセンティブ」.md
@@ -69,7 +69,7 @@ tags:
 
 前章において、ビットコインではProof of Workを解いてブロックを作成したり、取引やブロックに問題がないか監視をするノードがネットワークを支えていると解説しました。それでは、なぜノードはそのようなコストをかけてまでネットワークを維持しようとするのでしょうか。
 
-ノードに対する報酬
+#### ノードに対する報酬
 
 それは、ノードはブロックを作成した時に報酬を得ることができるからです。
 
@@ -82,7 +82,37 @@ tags:
 
 * ビットコイン稼働開始時点での報酬は、1ブロック作成で50BTC
 * 21万ブロック（約4年）ごとに報酬が半減する
-* 
+* 報酬が最小単位未満になったら発行終了
+* 計算上1,344万ブロックが上限、その時のビットコイン流通量は約2,100万BTC
+* 予想では2140年に発行上限に達する
+
+2018年現在では、2ど半減期を経て、12.5BTCが報酬となっています。次回の半減期は2020年です。
+
+なお、ブロック生成スピードはProof of Workの難易度が調整されることで可変なため、半減期を迎えるタイミングはあくまでも10分でで1ブロックが生成されるとした場合です。
+
+2については、わかりやすいようで少し奥が深い仕組みです。
+
+？？実際の取引の中身ってどうなっているの？？
+
+？？UTXOはここで説明？？
+
+？？ブロックヘッダの内容もここでやるか？？
+
+#### 攻撃者のインセンティブ
+
+ビットコインのネットワークでは、善意のノードがCPUパワーの総計の過半数を占めることで攻撃者からネットワークを守ることができ、裏を返せば攻撃者は過半数を取ってしまえば改竄することができます。
+
+しかしながら、本章では攻撃者が仮に過半数のCPUパワーを抑えたとしても、ネットワークに攻撃を仕掛けるのではなく、そのCPUパワーでブロックを作って正当な報酬を得た方が利益になると説いています。
+
+まず、取引記録は全て公開されているので、不自然に記録が改竄されればノードが変更に気づきます。直ちに攻撃者の存在はネットワークの参加者の知るところとなり、すでにネットワークが過半数を抑えられており乗っ取られていることが判明すれば、ノードは撤退していくでしょう。ネットワーク参加者が減ればコインの流通も滞り、ノード同様ユーザーも不安を抱えるのでコインを利用しなくなります。流通していることが価値であるビットコインは倦厭され、市場価値も下がってしまいます。こうなると、攻撃者が乗っ取った瞬間が市場価値のピークであるので、攻撃者が費やした機械や電気代の投資が回収できなくなります。
+
+このような大規模な投資と、値段が下がるという大きなリスクを冒しても、できることといえば二重支払いを成立させるくらいで、他人のコインを奪ったり（所有者の秘密鍵が必要）、コインそのものを無から生み出すことはできません。
+
+ならば、そのCPUパワーで正しくブロックを生成することで、ブロック生成時の報酬であるコインと取引手数料を得た方が利益になる、というのが論法です。
+
+確かにロジックとしては筆者の述べる通りかもしれませんが、現実には「Block withholding attack（ブロック隠し堀り攻撃）」という攻撃が起きており、ブロックチェーンの根幹を揺るがす大きなリスクになっています。
+
+参照: [モナコインで莫大なプロセッサパワーをつかった重大な攻撃](https://techwave.jp/archives/monacoin-block-withholding-attack.html)
 
 <hr>
 ＜　前章: 第5章　ネットワーク
