Update Blog “2018-09-22-ビットコイン原論文解説　第7章「ディスク領域の再利用」”

--- a/src/pages/blog/2018-09-22-ビットコイン原論文解説　第7章「ディスク領域の再利用」.md
+++ b/src/pages/blog/2018-09-22-ビットコイン原論文解説　第7章「ディスク領域の再利用」.md
@@ -39,16 +39,34 @@ tags:
 
 ## 原文
 
+> Once the latest transaction in a coin is buried under enough blocks, the spent transactions before it can be discarded to save disk space. To facilitate this without breaking the block's hash, transactions are hashed in a Merkle Tree \[7]\[2]\[5], with only the root included in the block's hash. Old blocks can then be compacted by stubbing off branches of the tree. The interior hashes do not need to be stored.
+>
+> ![markle tree](/img/bitcoin_markl_pdf.png)
+>
+> A block header with no transactions would be about 80 bytes. If we suppose blocks are generated every 10 minutes, 80 bytes 6 24 * 365 = 4.2MB per year. With computer systems typically selling with 2GB of RAM as of 2008, and Moore's Law predicting current growth of 1.2GB per year, storage should not be a problem even if the block headers must be kept in memory
+>
+> <span style="font-size: 80%">\[7] R.C. Merkle, "Protocols for public key cryptosystems," In Proc. 1980 Symposium on Security and Privacy, IEEE Computer Society, pages 122-133, April 1980.</span>
+>
+> <span style="font-size: 80%">\[2] H. Massias, X.S. Avila, and J.-J. Quisquater, "Design of a secure timestamping service with minimal trust requirements," In 20th Symposium on Information Theory in the Benelux, May 1999.</span>
+>
+> <span style="font-size: 80%">\[5] S. Haber, W.S. Stornetta, "Secure names for bit-strings," In Proceedings of the 4th ACM Conference on Computer and Communications Security, pages 28-35, April 1997.</span>
 
 ## 原文日本語訳
 
+コインの最新の取引の後、十分なブロックが生成されたら、それ以前に行われた取引記録を破棄してディスク領域を節約することができます。ブロックのハッシュを壊さずにこれを容易にするために、トランザクションはマークル・ツリーでハッシュ化され、ルートハッシュのみが使用されブロックのハッシュに含まれます。古いブロックは、マークル・ツリーのブランチを切り落とすことで圧縮できます。内部のハッシュを保存する必要はありません。
 
+![markle tree](/img/bitcoin_markl_pdf.png)
+
+取引記録のないブロックヘッダーは約80バイトです。ブロックが10分ごとに生成されると仮定すると、80 bytes \* 6 \* 24 * 365 = 4.2MB/年。2008年現在、2GBのRAMを搭載したコンピュータが一般的に販売されており、ムーアの法則に従えば1.2GB/年の成長が予測されるので、ブロックヘッダをメモリに保持しなければならない場合でも保存容量は問題にならないはずです。
 
 ## 解説
 
 ### まとめ
 
-
+* 古い取引記録を破棄することで、ディスク領域を節約できる。
+* 領域節約のため、取引記録そのものを残すのではなく、マークル・ツリーのルートハッシュだけがブロックヘッダーに入っている。
+* 取引記録を省いたブロックヘッダーは約80バイトなので、年間で約4.2MBとなる。
+* 2008年に販売されているRAM（メモリ）が通常2GBであること、また、ムーアの法則に従ってRAMの容量が増えることが予測されるので、ブロックヘッダを全て保存するのは問題にならない。
 
 ### 詳しい解説
 
