Update Blog “2018-09-22-ビットコイン原論文解説　第8章「簡易版支払い検証」”

--- a/src/pages/blog/2018-09-22-ビットコイン原論文解説　第8章「簡易版支払い検証」.md
+++ b/src/pages/blog/2018-09-22-ビットコイン原論文解説　第8章「簡易版支払い検証」.md
@@ -39,7 +39,17 @@ tags:
 
 ## 原文
 
+> It is possible to verify payments without running a full network node. A user only needs to keep a copy of the block headers of the longest proof-of-work chain, which he can get by querying network nodes until he's convinced he has the longest chain, and obtain the Merkle branch linking the transaction to the block it's timestamped in. He can't check the transaction for himself, but by linking it to a place in the chain, he can see that a network node has accepted it, and blocks added after it further confirm the network has accepted it.
+>
+> ![SPV](/img/bitcoin_spv_pdf.png)
+>
+> As such, the verification is reliable as long as honest nodes control the network, but is more vulnerable if the network is overpowered by an attacker. While network nodes can verify transactions for themselves, the simplified method can be fooled by an attacker's fabricated transactions for as long as the attacker can continue to overpower the network. One strategy to protect against this would be to accept alerts from network nodes when they detect an invalid block, prompting the user's software to download the full block and alerted transactions to confirm the inconsistency. Businesses that receive frequent payments will probably still want to run their own nodes for more independent security and quicker verification.
+
 ## 原文日本語訳
+
+
+
+完全なネットワークノードを実行することなく支払いを確認することは可能です。 ユーザは、最長の作業証明連鎖のブロックヘッダのコピーを保持する必要があります。これは、最長のチェーンを持つことを確信するまでネットワークノードに問い合わせることで得られ、トランザクションをブロックにリンクするMerkleブランチを取得するだけです 彼は自分自身のためにトランザクションをチェックすることはできませんが、チェーン内の場所にリンクすることで、ネットワークノードがそれを受け入れたことを知ることができ、ネットワークがそれを受け入れたことをさらに確認した後にブロックが追加されます。
 
 ## 解説
 
