Update Blog “2018-09-22-ビットコイン原論文解説　第8章「簡易版支払い検証」”

--- a/src/pages/blog/2018-09-22-ビットコイン原論文解説　第8章「簡易版支払い検証」.md
+++ b/src/pages/blog/2018-09-22-ビットコイン原論文解説　第8章「簡易版支払い検証」.md
@@ -47,7 +47,7 @@ tags:
 
 ## 原文日本語訳
 
-
+全ての情報を持つフルノードを持たなくても、支払いを検証することが可能です。ユーザーは、最も長いチェーンを持っていると確認するまでネットワークの他のノードに問い合わせを行うことで最長のチェーンを得ることができます。そして、最長チェーンのブロックヘッダーのこぴーを保持し、タイムスタンプが組み込まれたブロックとトランザクションが紐づいたマークルブランチを取得するだけけです。このユーザーは自身でトランザクションを検証することはできませんが、トランザクションとチェーンの位置を紐づけることで、ノードがトランザクションを取り入れたことを知り、さらにその後付け加えられたブロックがより一層ネットワークがそのトランザクションを受け入れたことを強固にします。
 
 完全なネットワークノードを実行することなく支払いを確認することは可能です。 ユーザは、最長の作業証明連鎖のブロックヘッダのコピーを保持する必要があります。これは、最長のチェーンを持つことを確信するまでネットワークノードに問い合わせることで得られ、トランザクションをブロックにリンクするMerkleブランチを取得するだけです 彼は自分自身のためにトランザクションをチェックすることはできませんが、チェーン内の場所にリンクすることで、ネットワークノードがそれを受け入れたことを知ることができ、ネットワークがそれを受け入れたことをさらに確認した後にブロックが追加されます。
 
