Update Blog “2018-09-22-ビットコイン原論文解説　第8章「簡易版支払い検証」”

--- a/src/pages/blog/2018-09-22-ビットコイン原論文解説　第8章「簡易版支払い検証」.md
+++ b/src/pages/blog/2018-09-22-ビットコイン原論文解説　第8章「簡易版支払い検証」.md
@@ -47,9 +47,12 @@ tags:
 
 ## 原文日本語訳
 
-全ての情報を持つフルノードを持たなくても、支払いを検証することが可能です。ユーザーは、最も長いチェーンを持っていると確認するまでネットワークの他のノードに問い合わせを行うことで最長のチェーンを得ることができます。そして、最長チェーンのブロックヘッダーのこぴーを保持し、タイムスタンプが組み込まれたブロックとトランザクションが紐づいたマークルブランチを取得するだけけです。このユーザーは自身でトランザクションを検証することはできませんが、トランザクションとチェーンの位置を紐づけることで、ノードがトランザクションを取り入れたことを知り、さらにその後付け加えられたブロックがより一層ネットワークがそのトランザクションを受け入れたことを強固にします。
+全ての情報を持つフルノードを持たなくても、支払いを検証することが可能です。ユーザーは、最も長いチェーンを持っていると確認するまでネットワークの他のノードに問い合わせを行うことで最長のチェーンを得ることができます。そして、最長チェーンのブロックヘッダーのコピーを保持し、タイムスタンプが組み込まれたブロックとトランザクションが紐づいたマークルブランチを取得するだけけです。このユーザーは自身でトランザクションを検証することはできませんが、トランザクションとチェーンの位置を紐づけることで、ノードがトランザクションを取り入れたことを確認します。さらにその後ブロックが付け加えられることで、より一層ネットワークがそのトランザクションを受け入れたことを確証します。
 
-完全なネットワークノードを実行することなく支払いを確認することは可能です。 ユーザは、最長の作業証明連鎖のブロックヘッダのコピーを保持する必要があります。これは、最長のチェーンを持つことを確信するまでネットワークノードに問い合わせることで得られ、トランザクションをブロックにリンクするMerkleブランチを取得するだけです 彼は自分自身のためにトランザクションをチェックすることはできませんが、チェーン内の場所にリンクすることで、ネットワークノードがそれを受け入れたことを知ることができ、ネットワークがそれを受け入れたことをさらに確認した後にブロックが追加されます。
+![SPV](/img/bitcoin_spv_pdf.png)
+
+
+したがって、善意なノードがネットワークをコントロールする限り検証は信頼できるものの、もしネットワークが攻撃者によって占拠された場合に検証はより不確かなものになります。ノードが自分自身でトランザクションを検証できる一方で、攻撃者がネットワークよりもパワーを持ち続ける限り、簡便な検証では攻撃者がでっち上げたトランザクションに騙される可能性があります。この攻撃を防ぐ一つの方法は、無効なブロックを検出した時にノードから警告を受け取り、矛盾を確認するためユーザーのソフトウェアに全てのブロックと警告されたトランザクションをダウンロードするように促すことである。頻繁に支払いを受けるビジネスでは、独立したセキュリティと速い検証のために、独自のノードを運用するかもしれません。
 
 ## 解説
 
