Update Blog “2018-09-22-ビットコイン原論文解説　第8章「簡易版支払い検証」”

--- a/src/pages/blog/2018-09-22-ビットコイン原論文解説　第8章「簡易版支払い検証」.md
+++ b/src/pages/blog/2018-09-22-ビットコイン原論文解説　第8章「簡易版支払い検証」.md
@@ -51,12 +51,17 @@ tags:
 
 ![SPV](/img/bitcoin_spv_pdf.png)
 
-
-したがって、善意なノードがネットワークをコントロールする限り検証は信頼できるものの、もしネットワークが攻撃者によって占拠された場合に検証はより不確かなものになります。ノードが自分自身でトランザクションを検証できる一方で、攻撃者がネットワークよりもパワーを持ち続ける限り、簡便な検証では攻撃者がでっち上げたトランザクションに騙される可能性があります。この攻撃を防ぐ一つの方法は、無効なブロックを検出した時にノードから警告を受け取り、矛盾を確認するためユーザーのソフトウェアに全てのブロックと警告されたトランザクションをダウンロードするように促すことである。頻繁に支払いを受けるビジネスでは、独立したセキュリティと速い検証のために、独自のノードを運用するかもしれません。
+したがって、善意なノードがネットワークをコントロールする限り検証は信頼できるものの、もしネットワークが攻撃者によって占拠された場合に検証はより不確かなものになります。ノードが自分自身でトランザクションを検証できる一方で、攻撃者がネットワークよりもパワーを持ち続ける限り、簡便な検証では攻撃者がでっち上げたトランザクションに騙される可能性があります。この攻撃を防ぐ一つの方法は、無効なブロックを検出した時にノードから警告を受け取り、矛盾を確認するためユーザーのソフトウェアに全てのブロックと警告されたトランザクションをダウンロードするように促すことである。頻繁に支払いを受けるビジネスでは、より独立したセキュリティと速い検証のために、独自のノードを運用する方が良いかもしれません。
 
 ## 解説
 
 ### まとめ
+
+* 全てのトランザクションを持つフルノードでなくても支払いを検証することができる。
+* フルノードではないノード（軽量ノード）は、最長のブロックチェーンのブロックヘッダーのコピーを持つ。
+* 軽量ノードは検証するトランザクションがチェーンのどの位置にあるかを見つけることで、そのトランザクションがノードによってチェーンに取り込まれていることを確認する。
+* ネットワークが攻撃者にコントロールされると、軽量ノード自身ではトランザクションを検証できないので、攻撃者がでっち上げたトランザクションに騙される可能性がある。
+* その対抗策として、無効なブロックを検出したら、全てのブロックをダウンロードして警告されたトランザクションと比較して矛盾を確認する方法がある。
 
 ### 詳しい解説
 
