Update Blog “2018-09-22-ビットコイン原論文解説　第7章「ディスク領域の再利用」”

--- a/src/pages/blog/2018-09-22-ビットコイン原論文解説　第7章「ディスク領域の再利用」.md
+++ b/src/pages/blog/2018-09-22-ビットコイン原論文解説　第7章「ディスク領域の再利用」.md
@@ -70,9 +70,19 @@ tags:
 
 ### 詳しい解説
 
+本章と次章では、取引とともに増え続けるブロックチェーンをどのようにして軽量化して扱うかについての内容です。
+
+ブロックチェーンのサイズ
+
+トランザクションの一つ一つは約数百バイトしか利用しませんが、1ブロックあたり約1,500個のブロックを含みます。2018年10月現在、1ブロックの平均サイズは0.75MB（仕様上の上限が1MB）であり、これまで生成されたブロックチェーンのサイズは約185GBとなります。
+
+これは、普通のPCで扱うにはそれほどの大きさではありませんが、スマートフォンやタブレット、組み込み機器などで扱うのには大きすぎます。そのため、そのようなスペックの低いマシンでもブロックチェーンに接続してノードとして振る舞うことができるよう、データの一部だけを保存しておき、検証を行うたびに全てのデータを持つフルノードへ必要なデータを問い合わせる仕組みが用意されています。
+
+このような一部のデータだけを持つノードを「軽量ノード」と呼び、どのようにしてトランザクションの検証を行うのかは、次章の内容です。
 
 
-<hr>
+
+ <hr>
 ＜　前章: 第6章　インセンティブ
 
 　　次章: 第8章　簡易版支払い検証　＞
