--- a/src/pages/blog/2018-09-22-ビットコイン原論文解説　第7章「ディスク領域の再利用」.md
+++ b/src/pages/blog/2018-09-22-ビットコイン原論文解説　第7章「ディスク領域の再利用」.md
@@ -74,13 +74,21 @@ tags:
 
 ブロックチェーンのサイズ
 
-トランザクションの一つ一つは約数百バイトしか利用しませんが、1ブロックあたり約1,500個のブロックを含みます。2018年10月現在、1ブロックの平均サイズは0.75MB（仕様上の上限が1MB）であり、これまで生成されたブロックチェーンのサイズは約185GBとなります。
+トランザクションの一つ一つは約数百バイトしか利用しませんが、1ブロックあたり約1,500個のブロックを含みます。2018年10月現在、1ブロックの平均サイズは0.75MB（仕様上の上限が1MB）であり、これまで生成された[ブロックチェーンのサイズ](https://www.blockchain.com/ja/charts/blocks-size)は約185GBとなります。
 
 これは、普通のPCで扱うにはそれほどの大きさではありませんが、スマートフォンやタブレット、組み込み機器などで扱うのには大きすぎます。そのため、そのようなスペックの低いマシンでもブロックチェーンに接続してノードとして振る舞うことができるよう、データの一部だけを保存しておき、検証を行うたびに全てのデータを持つフルノードへ必要なデータを問い合わせる仕組みが用意されています。
 
 このような一部のデータだけを持つノードを「軽量ノード」と呼び、どのようにしてトランザクションの検証を行うのかは、次章の内容です。
 
+ブロックヘッダー
 
+ブロックチェーンはトランザクションの集合や、前のブロックのハッシュ、ノンス、タイムスタンプなどから成ります。この中で一番容量をしめるのはトランザクションの集合です。
+
+前章までにトランザクションが改竄できない仕組みは、ブロックのハッシュが次のブロックに取り込まれ鎖のように連鎖しているから、と解説してきました。ブロックのハッシュとは、ブロックの内容をハッシュ関数で要約した値であり、少しでもインプット内容が変わればアウトプットのハッシュは全く別物になります。
+
+それでは、ブロックに含まれる全てのトランザクションを保持してなければいけないかというと、そうではありません。チェーンの楔として前のブロックそのもではなくブロックのハッシュを用いたように、トランザクションそのものではなくトランザクションのハッシュを用いることができます。
+
+そのトランザクションの集合を一つのハッシュにまとめあげる仕組みがマークルツリーです。
 
  <hr>
 ＜　前章: 第6章　インセンティブ
