Update Blog “2018-09-22-ビットコイン原論文解説　第7章「ディスク領域の再利用」”

--- a/src/pages/blog/2018-09-22-ビットコイン原論文解説　第7章「ディスク領域の再利用」.md
+++ b/src/pages/blog/2018-09-22-ビットコイン原論文解説　第7章「ディスク領域の再利用」.md
@@ -72,7 +72,7 @@ tags:
 
 本章と次章では、取引とともに増え続けるブロックチェーンをどのようにして軽量化して扱うかについての内容です。
 
-ブロックチェーンのサイズ
+#### ブロックチェーンのサイズ
 
 トランザクションの一つ一つは約数百バイトしか利用しませんが、1ブロックあたり約1,500個のブロックを含みます。2018年10月現在、1ブロックの平均サイズは0.75MB（仕様上の上限が1MB）であり、これまで生成された[ブロックチェーンのサイズ](https://www.blockchain.com/ja/charts/blocks-size)は約185GBとなります。
 
@@ -80,7 +80,7 @@ tags:
 
 このような一部のデータだけを持つノードを「軽量ノード」と呼び、どのようにしてトランザクションの検証を行うのかは、次章の内容です。
 
-ブロックヘッダー
+#### ブロックヘッダー
 
 ブロックチェーンはトランザクションの集合や、前のブロックのハッシュ、ノンス、タイムスタンプなどから成ります。この中で一番容量をしめるのはトランザクションの集合です。
 
@@ -88,7 +88,32 @@ tags:
 
 それでは、ブロックに含まれる全てのトランザクションを保持してなければいけないかというと、そうではありません。チェーンの楔として前のブロックそのもではなくブロックのハッシュを用いたように、トランザクションそのものではなくトランザクションのハッシュを用いることができます。
 
-そのトランザクションの集合を一つのハッシュにまとめあげる仕組みがマークルツリーです。
+そのトランザクションの集合を一つのハッシュにまとめあげる仕組みがマークルツリーです。マークルツリーよってまとめられたハッシュのことを「マークルルート」ないし「ルートハッシュ」と呼びます。これがトランザクションの代替としてブロックヘッダーに含まれています。
+
+本文中にもあるように、取引記録のないブロックヘッダーは約80バイトしかなく、一年で生成される全てのブロックのヘッダーを合わせても約4.2MBしかありません。ハードウェアの性能は右肩上がりですので、今後ブロックチェーンが伸び続けても問題なく管理できます。
+
+#### マークルツリー
+
+それではトランザクションをまとめ上げるマークルツリーとはどのような仕組みでしょうか。
+
+下図をご覧ください。
+
+![マークルツリー](/img/markle_tree.png)
+
+一番底辺にあるのが4つのトランザクション Tx0 〜 Tx3です。
+
+まずこのトランザクションをハッシュ化してHash0 〜 Hash3 をつくります。
+
+その後、ハッシュのペアをつくり、ハッシュの文字列を結合させたものをインプットとして、新しいハッシュ Hash01、 Hash23 をつくります。
+
+さらに、新しくできたハッシュ同士を結合させたものをインプットとしてハッシュ化し、Hash0123 がルートハッシュとなります。
+
+どのトランザクションが変更されても、ルートハッシュが変更されていることを確認してください。
+
+##### Note
+
+1. ハッシュのペアを作って結合させる、とは、例えば「Hash0 => "abcde"」「Hash1 => "fghij"」ならば、「Hash0+Hash1 => "abcdefghij"」ということです。
+2. この過程でトランザクションが2の累乗個数ないとある時点でペアが作れなくなります。そのような場合にはペアのないものを複製してペアとします。
 
  <hr>
 ＜　前章: 第6章　インセンティブ
