Update Blog “2018-09-22-ビットコイン原論文解説　第7章「ディスク領域の再利用」”

--- a/src/pages/blog/2018-09-22-ビットコイン原論文解説　第7章「ディスク領域の再利用」.md
+++ b/src/pages/blog/2018-09-22-ビットコイン原論文解説　第7章「ディスク領域の再利用」.md
@@ -78,7 +78,7 @@ tags:
 
 これは、普通のPCで扱うにはそれほどの大きさではありませんが、スマートフォンやタブレット、組み込み機器などで扱うのには大きすぎます。そのため、そのようなスペックの低いマシンでもブロックチェーンに接続してノードとして振る舞うことができるよう、データの一部だけを保存しておき、検証を行うたびに全てのデータを持つフルノードへ必要なデータを問い合わせる仕組みが用意されています。
 
-このような一部のデータだけを持つノードを「軽量ノード」と呼び、どのようにしてトランザクションの検証を行うのかは、次章の内容です。
+このような一部のデータだけを持つノードを「軽量ノード」と呼び、どのようにしてトランザクションの検証を行うのかは、次章で解説します。
 
 #### ブロックヘッダー
 
@@ -108,12 +108,14 @@ tags:
 
 さらに、新しくできたハッシュ同士を結合させたものをインプットとしてハッシュ化し、Hash0123 がルートハッシュとなります。
 
-どのトランザクションが変更されても、ルートハッシュが変更されていることを確認してください。
+どのトランザクションが変更されても、ルートハッシュが変更されることを確認してください。
 
 ##### Note
 
 1. ハッシュのペアを作って結合させる、とは、例えば「Hash0 => "abcde"」「Hash1 => "fghij"」ならば、「Hash0+Hash1 => "abcdefghij"」ということです。
+
 2. この過程でトランザクションが2の累乗個数ないとある時点でペアが作れなくなります。そのような場合にはペアのないものを複製してペアとします。
+
 
  <hr>
 ＜　前章: 第6章　インセンティブ
