Update Blog “2018-09-22-ビットコイン原論文解説　第8章「簡易版支払い検証」”

--- a/src/pages/blog/2018-09-22-ビットコイン原論文解説　第8章「簡易版支払い検証」.md
+++ b/src/pages/blog/2018-09-22-ビットコイン原論文解説　第8章「簡易版支払い検証」.md
@@ -51,7 +51,7 @@ tags:
 
 ![SPV](/img/bitcoin_spv_pdf.png)
 
-したがって、善意なノードがネットワークをコントロールする限り検証は信頼できるものの、もしネットワークが攻撃者によって占拠された場合に検証はより不確かなものになります。ノードが自分自身でトランザクションを検証できる一方で、攻撃者がネットワークよりもパワーを持ち続ける限り、簡便な検証では攻撃者がでっち上げたトランザクションに騙される可能性があります。この攻撃を防ぐ一つの方法は、無効なブロックを検出した時にノードから警告を受け取り、矛盾を確認するためユーザーのソフトウェアに全てのブロックと警告されたトランザクションをダウンロードするように促すことである。頻繁に支払いを受けるビジネスでは、より独立したセキュリティと速い検証のために、独自のノードを運用する方が良いかもしれません。
+したがって、善意なノードがネットワークをコントロールする限り検証は信頼できるものの、もしネットワークが攻撃者によって占拠された場合に検証はより不確かなものになります。ノードが自分自身でトランザクションを検証できる一方で、攻撃者がネットワークよりもパワーを持ち続ける限り、簡便な検証では攻撃者がでっち上げたトランザクションに騙される可能性があります。この攻撃を防ぐ一つの方法は、無効なブロックを検出した時にノードから警告を受け取り、矛盾を確認するためユーザーのソフトウェアに全てのブロックと警告されたトランザクションをダウンロードするように促すことです。頻繁に支払いを受けるビジネスでは、より独立したセキュリティと速い検証のために、独自のノードを運用する方が良いかもしれません。
 
 ## 解説
 
@@ -64,6 +64,32 @@ tags:
 * その対抗策として、無効なブロックを検出したら、全てのブロックをダウンロードして警告されたトランザクションと比較して矛盾を確認する方法がある。
 
 ### 詳しい解説
+
+前章から引き続き、軽量ノードに関する解説です。
+
+軽量ノードはブロックチェーンのブロックヘッダーのみを保持し、一つ一つのトランザクションを持ちません。ではどのように特定の取引を検証するのでしょうか。
+
+#### 軽量ノードの検証手順
+
+例えば、Tx0 〜 Tx3のトランザクションが含まれるブロックの、Tx3について検証するとします。
+
+軽量ノードはネットワークを通じてフルノードにTx3を特定するIDを送ります。フルノードは保持するトランザクションを検索して、該当するトランザクションを見つけると、関連情報を返却します。
+
+この時、トランザクションが全て含まれたブロックを丸ごと返すのは効率が悪いので、Hash01、Hash2だけを返します。
+
+軽量ノードは返却された情報を受け、Tx3のハッシュと合わせて、計算されたマークルルートと、もともと持っていたブロックヘッダーに含まれるマークルルートの値が等しいことを確認します。
+
+等しければ、Tx3がブロックチェーンに組み込まれていることの証明になります。
+
+#### 攻撃への対抗策
+
+もしネットワークが攻撃者の手によって改ざんが可能な状態になっているとすると、軽量ノードは自らトランザクションを持たないため、攻撃者から偽のトランザクションが含まれるブロックを渡された場合、その情報に基づいて検証を行うので騙されてしまいます。
+
+これを防ぐには、改ざんを検出できるフルノードから無効なトランザクションが発生したという警告を受け取り、その時に全てのブロックと無効なトランザクションをダウンロードして不一致を検証することです。
+
+##### Note
+
+本論文では一応の対抗策が述べられていますが、これまで解説してきたようにネットワークが攻撃者にパワーで負けている時、フルノードとはいえ改ざんを見抜くことはできません。
 
 <hr>
 ＜　前章: 第7章　ディスク領域の再利用
