Update Blog “2018-09-29-ビットコイン原論文解説　第9章「価値の結合と分割」”

--- a/src/pages/blog/2018-09-29-ビットコイン原論文解説　第9章「価値の結合と分割」.md
+++ b/src/pages/blog/2018-09-29-ビットコイン原論文解説　第9章「価値の結合と分割」.md
@@ -39,7 +39,19 @@ tags:
 
 ## 原文
 
+> Although it would be possible to handle coins individually, it would be unwieldy to make a separate transaction for every cent in a transfer. To allow value to be split and combined, transactions contain multiple inputs and outputs. Normally there will be either a single input from a larger previous transaction or multiple inputs combining smaller amounts, and at most two outputs: one for the payment, and one returning the change, if any, back to the sender.
+
+![Transaction](/img/bitcoin_utxo_pdf.png)
+
+> It should be noted that fan-out, where a transaction depends on several transactions, and those transactions depend on many more, is not a problem here. There is never the need to extract a complete standalone copy of a transaction's history.
+
 ## 原文日本語訳
+
+個別にコインを処理することは可能ですが、送金の1セントごとにトランザクションを分けるのは扱いにくいでしょう。値を分割したり結合したりできるように、トランザクションは複数のインプットとアウトプットを持ちます。通常、インプットには、以前のより大きなトランザクションからの単一なインプットと、少量を組み合わせた複数のインプットがあります。アウトプットは最大二つで、一つは支払い用のアウトプット、もう一つは（もしあれば）送金元に戻ってくるお釣り用のアウトプットです。
+
+![Transaction](/img/bitcoin_utxo_pdf.png)
+
+特筆すべきは、トランザクションが複数のトランザクションに依存し、また依存元のトランザクションもさらに多数のトランザクションに依存しているというファンアウトは問題にならないという点です。トランザクション履歴の完全なスタンドアロンコピーを抽出する必要は一切ありません。
 
 ## 解説
 
