Update Blog “2018-09-29-ビットコイン原論文解説　第9章「価値の結合と分割」”

--- a/src/pages/blog/2018-09-29-ビットコイン原論文解説　第9章「価値の結合と分割」.md
+++ b/src/pages/blog/2018-09-29-ビットコイン原論文解説　第9章「価値の結合と分割」.md
@@ -57,7 +57,18 @@ tags:
 
 ### まとめ
 
+* トランザクションには複数のインプットとアウトプットが含まれる。
+* インプットは、以前のより大きなトランザクションであれば一つ、より小さなトランザクションであれば複数になる。
+* アウトプットは、送金用が一つ、お釣りがあればお釣り用が一つの、最大二つである。
+* トランザクションはインプットとアウトプットによって連鎖しているが、その連鎖構造を解明しなくても問題にはならない。
+
 ### 詳しい解説
+
+本章では、第二章「取引」と関連して、トランザクションの内部構造について述べられています。
+
+ビットコインには、私たちが普段利用する銀行のような「残高」や「口座」といった仕組みを持ちません。全ては、貸借対照表のようにインプットとアウトプットのフローの概念で処理されています。
+
+具体例がないとわかりづらいので、コーヒーショップの事例で考えてみましょう。
 
 <hr>
 ＜　前章: 第8章　簡易版支払い検証
