--- a/src/pages/blog/2018-09-29-ビットコイン原論文解説　第9章「価値の結合と分割」.md
+++ b/src/pages/blog/2018-09-29-ビットコイン原論文解説　第9章「価値の結合と分割」.md
@@ -70,6 +70,20 @@ tags:
 
 具体例がないとわかりづらいので、コーヒーショップの事例で考えてみましょう。
 
+![](/img/transaction.png)
+
+Bobはシリコンバレーで有機栽培のコーヒーにこだわったコーヒーショップを経営しています。エンジニアから独立した新進気鋭な精神の持ち主で、現金の非効率性やクレジットカードの手数料が嫌いです。そのためBobのコーヒーショップではビットコインでしか支払いを受け付けていません。
+
+近頃Bobのコーヒーショップの近所に引っ越してきたAliceは連日行列を作っているBobの店が気になってしかたありません。しかしながらAliceはビットコインを持っていませんでした。
+
+Aliceの会社の同僚であるZackはビットコインマイナーでたくさんのビットコインを持っています。AliceはZackに頼んでビットコインを1BTC分だけ譲ってもらいました。
+
+アリスは1BTCを受け取ったので、Bobの店に向かいます。Bobの店ではコーヒーが0.1BTCで売られています。Aliceはレジで商品を受け取り、Bobの店のアドレスに0.1BTCを送金します。この時、インプットにZackから1BTCが利用され、お釣りとして0.9BTCが発生するので、0.9BTC分はAlice自身のアドレスに送金します。
+
+無事に美味しいコーヒーを堪能できました。
+
+その晩、Bobは友人に紹介してもらったグラフィックデザイナーのChrisから依頼していたショップカードが仕上がったと連絡を受けました。メールに添付された画像のデザインに満足し、BobはChrisに報酬の0.45BTCを支払います。この時、インプットには初来店のAliceと、常連客のYannがコーヒー代として支払ったビットコインが当てられ、お釣りである0.05BTCはBobのアドレスに送金されます。
+
 <hr>
 ＜　前章: 第8章　簡易版支払い検証
 
