Update Blog “2018-09-29-ビットコイン原論文解説　第9章「価値の結合と分割」”

--- a/src/pages/blog/2018-09-29-ビットコイン原論文解説　第9章「価値の結合と分割」.md
+++ b/src/pages/blog/2018-09-29-ビットコイン原論文解説　第9章「価値の結合と分割」.md
@@ -94,7 +94,9 @@ Aliceは無事に美味しいコーヒーを堪能できました。
 
 このように、トランザクションはインプットとアウトプットが常に対称です。インプットが用意できるということは、その以前のトランザクションでアウトプットとしてビットコインを得ているということです。トランザクションは過去へ過去へと遡ることができ、最終的には起源であるGenesisブロックまでたどり着きます。
 
+この時、一つのトランザクションごとに、Genesisブロックまで繋がる過去のトランザクションをまとめて独立したコピーを作るのは大変非効率です。
 
+そもそも、トランザクションがブロックに取り込まれる時にノードによって検証が行われており、過去のトランザクションであるほど高い信頼性を持っています。そのため、新規のトランザクションに対しては構造が仕様通りであるか、また、二重支払いとなっていないかが検証されれば、ブロックに入れることが出来ます。
 
 <hr>
 ＜　前章: 第8章　簡易版支払い検証
