Update Blog “2018-09-30-ビットコイン原論文解説　第10章「プライバシー」”

--- a/src/pages/blog/2018-09-30-ビットコイン原論文解説　第10章「プライバシー」.md
+++ b/src/pages/blog/2018-09-30-ビットコイン原論文解説　第10章「プライバシー」.md
@@ -39,7 +39,19 @@ tags:
 
 ## 原文
 
+> The traditional banking model achieves a level of privacy by limiting access to information to the parties involved and the trusted third party. The necessity to announce all transactions publicly precludes this method, but privacy can still be maintained by breaking the flow of information in another place: by keeping public keys anonymous. The public can see that someone is sending an amount to someone else, but without information linking the transaction to anyone. This is similar to the level of information released by stock exchanges, where the time and size of individual trades, the "tape", is made public, but without telling who the parties were.
+
+![Privacy](/img/bitcoin_privacy_pdf.png)
+
+> As an additional firewall, a new key pair should be used for each transaction to keep them from being linked to a common owner. Some linking is still unavoidable with multi-input transactions, which necessarily reveal that their inputs were owned by the same owner. The risk is that if the owner of a key is revealed, linking could reveal other transactions that belonged to the same owner.
+
 ## 原文日本語訳
+
+伝統的な銀行モデルは、情報へのアクセスを関連事業者と信頼できる第三者に制限することによって、一定のプライバシーを維持します。全てのトランザクションを公表することで銀行モデルを排除します。ただし、プライバシーは、他の場所の情報の流れを壊すことで依然として維持することが出来ます。つまり、公開鍵を匿名で保管するのです。ある人が他の誰かへ送金したことは衆目にさらされていますが、トランザクションが特定の人物に結びつくことはありません。このような仕組みは、株式市場から得られる情報のレベルに似ています。そこでは、個々の取引について時間とサイズの「テープ」が公開されていますが、誰が取引しているかはわかりません。
+
+![Privacy](/img/bitcoin_privacy_pdf.png)
+
+追加のファイアウォールとして、共通の所有者に紐づかないように、各トランザクションに新しいキーペアを使用する必要があります。複数のインプットがあるトランザクションでは、共通の所有者によってインプットが所有されていることを明らかにする必要があるので、いくつか紐づいてしまうのは避けられません。もし公開鍵の所有者が明らかになると、その関連付けは当該所有者に属する他のトランザクションも明らかにしてしまうリスクがあります。
 
 ## 解説
 
