--- a/src/pages/blog/2018-09-30-ビットコイン原論文解説　第10章「プライバシー」.md
+++ b/src/pages/blog/2018-09-30-ビットコイン原論文解説　第10章「プライバシー」.md
@@ -40,9 +40,9 @@ tags:
 ## 原文
 
 > The traditional banking model achieves a level of privacy by limiting access to information to the parties involved and the trusted third party. The necessity to announce all transactions publicly precludes this method, but privacy can still be maintained by breaking the flow of information in another place: by keeping public keys anonymous. The public can see that someone is sending an amount to someone else, but without information linking the transaction to anyone. This is similar to the level of information released by stock exchanges, where the time and size of individual trades, the "tape", is made public, but without telling who the parties were.
-
-![Privacy](/img/bitcoin_privacy_pdf.png)
-
+>
+> ![Privacy](/img/bitcoin_privacy_pdf.png)
+>
 > As an additional firewall, a new key pair should be used for each transaction to keep them from being linked to a common owner. Some linking is still unavoidable with multi-input transactions, which necessarily reveal that their inputs were owned by the same owner. The risk is that if the owner of a key is revealed, linking could reveal other transactions that belonged to the same owner.
 
 ## 原文日本語訳
@@ -57,7 +57,24 @@ tags:
 
 ### まとめ
 
+* 伝統的な銀行の仕組みでは、情報の開示先を制限することでプライバシーを保っているが、全てのトランザクションを公開するブロックチェーンでは別の方法でプライバシーを担保している。
+* それは、取引に利用する公開鍵を個人と切り離す、という方法である。
+* 異なるトランザクションごとに秘密鍵・公開鍵を新しくするとよりプライバシーを保てる。
+* ただし複数のインプットがあるようなトランザクションだと、公開鍵の所有者と複数のトランザクションが紐づいてしまうことは避けられない。
+
 ### 詳しい解説
+
+ブロックチェーンでは全てのトランザクションが公開されていることで、改ざんをすることが難しい仕組みを築いています。
+
+これはセキュリティ的には大きなメリットですが、全てのトランザクションが公開されていると聞くと、自分が誰に送金したかが知られたくない相手にも筒抜けになってしまう不安が生まれ、利用を躊躇してしまいそうです。
+
+普通、銀行のような仕組みであれば、取引記録は銀行内部で厳重に管理され、せいぜい関連する企業で何らかの審査に利用されるくらいで外に漏れ出すことは決してありません。
+
+一方、ブロックチェーンではトランザクションと個人を切り離すことでプライバシーを維持しています。
+
+ビットコインの送金ではアドレスを利用しますが、このアドレスは本人だけが知る秘密鍵から不可逆なハッシュ関数を通して生成されています。この秘密鍵が漏れ出さない限り、アドレスが乗っ取られることはありません。また、アドレスはただのランダムな文字列でしかなく、裏側で個人情報と紐づいているわけではありませんので、アドレスから個人を特定するのは不可能です。
+
+唯一、同じアドレスを使いまわすことで、行動パターンからアドレスの持ち主が特定されるリスクがあります。例えば、BobのコーヒーショップAliceが毎日8時45分に0.1BTCでコーヒーを買っている
 
 <hr>
 ＜　前章: 第9章　価値の結合と分割
