Update Blog “2018-09-30-ビットコイン原論文解説　第10章「プライバシー」”

--- a/src/pages/blog/2018-09-30-ビットコイン原論文解説　第10章「プライバシー」.md
+++ b/src/pages/blog/2018-09-30-ビットコイン原論文解説　第10章「プライバシー」.md
@@ -74,7 +74,11 @@ tags:
 
 ビットコインの送金ではアドレスを利用しますが、このアドレスは本人だけが知る秘密鍵から不可逆なハッシュ関数を通して生成されています。この秘密鍵が漏れ出さない限り、アドレスが乗っ取られることはありません。また、アドレスはただのランダムな文字列でしかなく、裏側で個人情報と紐づいているわけではありませんので、アドレスから個人を特定するのは不可能です。
 
-唯一、同じアドレスを使いまわすことで、行動パターンからアドレスの持ち主が特定されるリスクがあります。例えば、BobのコーヒーショップAliceが毎日8時45分に0.1BTCでコーヒーを買っている
+唯一、同じアドレスを使いまわすことで、行動パターンからアドレスの持ち主が特定されるリスクがあります。例えば、BobのコーヒーショップAliceが毎日8時45分に0.1BTCでコーヒーを買っていることを同僚のZackが知っていれば、Aliceのアドレスを特定し、他の買い物や送金もトランザクションから追うことができるでしょう。
+
+そのような個人特定リスクを下げるためには、トランザクションごとに新しい秘密鍵・公開鍵を用意し、同じアドレスを使わないことが必要です。
+
+また、それでも複数のインプットを持つトランザクションでは否応無くアドレスの共通する所有者が判明してしまうので、アドレスと本人が結びつかないように気をつける必要があります。
 
 <hr>
 ＜　前章: 第9章　価値の結合と分割
