--- a/src/pages/blog/2018-09-30-ビットコイン原論文解説　第11章「計算」.md
+++ b/src/pages/blog/2018-09-30-ビットコイン原論文解説　第11章「計算」.md
@@ -39,6 +39,65 @@ tags:
 
 ## 原文
 
+> We consider the scenario of an attacker trying to generate an alternate chain faster than the honest chain. Even if this is accomplished, it does not throw the system open to arbitrary changes, such as creating value out of thin air or taking money that never belonged to the attacker. Nodes are not going to accept an invalid transaction as payment, and honest nodes will never accept a block containing them. An attacker can only try to change one of his own transactions to take back money he recently spent.
+>
+> The race between the honest chain and an attacker chain can be characterized as a Binomial Random Walk. The success event is the honest chain being extended by one block, increasing its lead by +1, and the failure event is the attacker's chain being extended by one block, reducing the gap by -1.
+>
+> The probability of an attacker catching up from a given deficit is analogous to a Gambler's Ruin problem. Suppose a gambler with unlimited credit starts at a deficit and plays potentially an infinite number of trials to try to reach breakeven. We can calculate the probability he ever reaches breakeven, or that an attacker ever catches up with the honest chain, as follows \[8]:
+>
+> * p = probability an honest node finds the next block
+> * q = probability the attacker finds the next block
+> * qz = probability the attacker will ever catch up from z blocks behind
+>
+> ![Formula](/img/bitcoin_calc_1_pdf.png)
+>
+> Given our assumption that p > q, the probability drops exponentially as the number of blocks the attacker has to catch up with increases. With the odds against him, if he doesn't make a lucky lunge forward early on, his chances become vanishingly small as he falls further behind.
+>
+> We now consider how long the recipient of a new transaction needs to wait before being sufficiently certain the sender can't change the transaction. We assume the sender is an attacker who wants to make the recipient believe he paid him for a while, then switch it to pay back to himself after some time has passed. The receiver will be alerted when that happens, but the sender hopes it will be too late.
+>
+> The receiver generates a new key pair and gives the public key to the sender shortly before signing. This prevents the sender from preparing a chain of blocks ahead of time by working on it continuously until he is lucky enough to get far enough ahead, then executing the transaction at that moment. Once the transaction is sent, the dishonest sender starts working in secret on a parallel chain containing an alternate version of his transaction.
+>
+> The recipient waits until the transaction has been added to a block and z blocks have been linked after it. He doesn't know the exact amount of progress the attacker has made, but assuming the honest blocks took the average expected time per block, the attacker's potential progress will be a Poisson distribution with expected value:
+>
+> ![Formula2](/img/bitcoin_calc_2_pdf.png)
+>
+> To get the probability the attacker could still catch up now, we multiply the Poisson density for each amount of progress he could have made by the probability he could catch up from that point:
+>
+> ![Formula3](/img/bitcoin_calc_3_pdf.png)
+>
+> Rearranging to avoid summing the infinite tail of the distribution...
+>
+> ![Formula4](/img/bitcoin_calc_4_pdf.png)
+>
+> Converting to C code...
+
+```c
+#include <math.h>
+double AttackerSuccessProbability(double q, int z)
+{
+ double p = 1.0 - q;
+ double lambda = z * (q / p);
+ double sum = 1.0;
+ int i, k;
+ for (k = 0; k <= z; k++)
+ {
+ double poisson = exp(-lambda);
+ for (i = 1; i <= k; i++)
+ poisson *= lambda / i;
+ sum -= poisson * (1 - pow(q / p, z - k));
+ }
+ return sum;
+}
+```
+
+> Running some results, we can see the probability drop off exponentially with z.
+>
+> ![List1](/img/bitcoin_calc_6_pdf.png)
+>
+> Solving for P less than 0.1%...
+>
+> ![List2](/img/bitcoin_calc_7_pdf.png)
+
 ## 原文日本語訳
 
 ## 解説
