Update Blog “2018-09-30-ビットコイン原論文解説　第11章「計算」”

--- a/src/pages/blog/2018-09-30-ビットコイン原論文解説　第11章「計算」.md
+++ b/src/pages/blog/2018-09-30-ビットコイン原論文解説　第11章「計算」.md
@@ -131,6 +131,22 @@ double AttackerSuccessProbability(double q, int z)
 
 ## 原文日本語訳
 
+善意のノードによるチェーンよりも速く代替チェーンを生成しようとする攻撃者のシナリオを考えてみます。仮にこれが達成されたとしても、無からコインを生み出したり、攻撃者のものではないコインを奪うといった、任意の変更をシステムに与えることはありません。ノードは無効なトランザクションを支払いとして受け入れず、善意のノードはそれらを含むブロックを決して受け入れません。攻撃者ができることは、攻撃者が支払った直近のお金を取り戻そうと、自身のトランザクションを変更しようと試みるだけです。
+
+善良なチェーンと攻撃者のチェーンの間の競争は、「二項ランダムウォーク」として特徴付けることができます。 成功イベントでは、善良なチェーンが1ブロック拡張され、そのリードが1増加します。失敗イベントでは、攻撃者のチェーンが1ブロック拡張され、善良なチェーンとの差が1減少します。
+
+攻撃者が所与のビハインドから追いつく可能性は「ギャンブラー破産問題」に類似しています。無限の資金を持つギャンブラーが赤字からスタートし、損益分岐点を目指して無限回の賭けを行うと仮定しましょう。この時、ギャンブラーが損益分岐点にたどり着く確率、あるいは攻撃者が善良なチェーンに追いつく確率は次のように計算できます。
+
+* p = 善良なノードが次のブロックを見つける確率
+* q = 攻撃者が次のブロックを見つける確率
+* qz = 攻撃者が zブロックのビハインドを追いつく確率
+
+![Formula](/img/bitcoin_calc_1_pdf.png)
+
+p > q と仮定すると、攻撃者が追いつく確率は、追いつかなければいけないブロック数に応じて指数関数的に下がります。もし攻撃者が幸運に恵まれないならば、攻撃者の勝ち目とともに、攻撃者のチャンスはビハインドを受けるごとに小さく消えていきます。
+
+ここで、新しいトランザクションの受信者が、送信者がトランザクションを変更できないことを十分に確信するまで、どのくらいの時間を待つ必要があるか検討してみましょう。送信者が、しばらくの間受信者に支払いを行なったと信じ込ませ、その後ある程度時間が経ったらその支払いを送信者自身に戻すべくトランザクションを切り替えようとする攻撃者であると仮定してみます。切り替えが起こると受信者には警告が届きますが、送信者は警告が手遅れであることを期待します。
+
 ## 解説
 
 ### まとめ
